# CSG2

./: .gitignore  CMakeLists.txt  GenerateWrapper.cmake.in  LICENSE-MIT.txt  LICENSE.txt  PKGBUILD  README.md  bottle.py  butcheredbottle.py  configman.py  csg2-nginx.service.in  csg2.bat.in  csg2.in  csg2.py.in  csg2@.service.in  csgwsgiclasses.py  nginx.conf  nginx.conf.in  quickbuild.sh  requirements.txt  sandbox.py  serve.py  site-template.conf  site-template.conf.in
default-files/: login.tpl
docs/: config.json.docs.txt  security.txt  special_paths.txt
docs/configjson/: 1.txt  2.txt  latest.txt
docs/themes/: csg2.txt  thinandtall.txt
nginx-default/: badgateway.html  notavailable.html  timeout.html
nginx-default/errpages/: 404.html  404.js  503.html  503.js  Default.css  RemingtonNoiseless.css  RemingtonNoiseless.eot  typewriter.js
site.example/: config.json  index.tpl  login.tpl  script.py  secret.tpl
site.example/scss/: theme.scss
themes/csg2/: master.scss  master.tpl
themes/thinandtall/: master.scss  master.tpl
themes/thinandtall/assets/: csg2glyphs.css  dropdown.js
themes/thinandtall/assets/bebas_neue/: BebasNeue.css
themes/thinandtall/assets/fonts/: csg2glyphs.eot
